# webcam_processor

src/webcam_listener/: package.xml  setup.cfg  setup.py
src/webcam_listener/webcam_listener/: webcam_listener.py
src/webcam_listener_cpp/: CMakeLists.txt  package.xml
src/webcam_listener_cpp/src/: image_qual_evaluation.cpp  webcam_listener.cpp
